--- a/css/style.css
+++ b/css/style.css
@@ -75,8 +75,133 @@ p {
 
 .year {
   margin-bottom: 1rem;
-  font-size: 0.5rem;
   color: #555;
+  font-size: 1.5rem;
 }
-/* end of navbar */
+
 /* end of sidebar */
+
+/* navigation */
+.navigation {
+  margin-left: 8rem;
+  position: fixed;
+  height: 100%;
+  width: 40rem;
+  background: linear-gradient(
+      to top,
+      rgba(34, 32, 41, 1),
+      rgba(34, 32, 41, 0.8)
+    ),
+    url("../img/nav-bg.jpeg") center no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navigation-heading {
+  font-family: "josefin Sans", sans-serif;
+  font-family: 3.5rem;
+  font-weight: 300;
+  letter-spacing: 0.2rem;
+  color: #deaa86;
+  text-align: center;
+}
+.navigation-search {
+  position: relative;
+}
+.navigation-search-input {
+  width: 30rem;
+  padding: 1rem 1rem;
+  background-color: rgba(0, 0, 0, 0.3);
+  font-family: "josefin Sans", sans-serif;
+  font-size: 1.6rem;
+  color: #deaa86;
+  letter-spacing: 0.2rem;
+  outline: none;
+  border: 0.1rem solid #555;
+  border-radius: 10rem;
+  transition: background-color 0.3s;
+}
+
+.navigation-search-input:focus {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.navigation-search-btn {
+  border: none;
+  background-color: transparent;
+  color: #deaa86;
+  font-size: 1.7rem;
+  position: absolute;
+  /* right: 1rem;
+  left: 1rem; */
+  right: 0.4rem;
+  top: 0.5rem;
+  cursor: pointer;
+}
+
+.navigation-search-btn:focus {
+  outline: none;
+}
+
+.navigation-list {
+  list-style: none;
+  padding: 0;
+  height: 28rem;
+  /* border: 1px solid red; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.navigation-item {
+  position: relative;
+}
+.navigation-link {
+  color: white;
+  font-weight: 1.6rem;
+  font-size: 400;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  transition: color 0.5s;
+}
+.navigation-link::before {
+  content: "";
+  width: 0rem;
+  height: 0.1rem;
+  background-color: #deaa86;
+  position: absolute;
+  left: -4rem;
+  top: 1rem;
+  transition: width 0.5s cubic-bezier(1, 0, 0, 1);
+}
+.navigation-link::after {
+  content: "";
+  width: 0rem;
+  height: 0.1rem;
+  background-color: #deaa86;
+  position: absolute;
+  right: -4rem;
+  top: 1rem;
+  transition: width 0.5s cubic-bezier(1, 0, 01);
+}
+
+.navigation-link:hover {
+  color: #deaa86;
+}
+.navigation-link:hover::before,
+.navigation-link:hover::after {
+  width: 3rem;
+}
+.copyright {
+  color: #fff;
+  font-size: 1.2rem;
+  margin-bottom: 1.5rem;
+}
+/*  end of navigation*/
+
+/* end of navbar */
