--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ p {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  z-index: 1;
 }
 
 .menu-icon {
@@ -45,7 +46,7 @@ p {
 .line-1,
 .line-3 {
   width: 1.8rem;
-  transition: width 0.3s;
+  transition: all 0.3s;
 }
 
 .menu-icon:hover .line {
@@ -83,7 +84,7 @@ p {
 
 /* navigation */
 .navigation {
-  margin-left: 8rem;
+  left: -32rem;
   position: fixed;
   height: 100%;
   width: 40rem;
@@ -98,6 +99,7 @@ p {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  transition: left 0.8s cubic-bezier(1, 0, 0, 1);
 }
 
 .navigation-heading {
@@ -201,6 +203,24 @@ p {
   color: #fff;
   font-size: 1.2rem;
   margin-bottom: 1.5rem;
+}
+
+.checkbox:checked ~ .navigation {
+  left: 8rem;
+}
+
+.checkbox:checked ~ .sidebar .line-1 {
+  transform: rotate(-405deg) translate(-5px, 6px);
+  width: 2.5rem;
+}
+
+.checkbox:checked ~ .sidebar .line-2 {
+  opacity: 0;
+}
+
+.checkbox:checked ~ .sidebar .line-3 {
+  transform: rotate(405deg) translate(-5px, -6px);
+  width: 2.5rem;
 }
 /*  end of navigation*/
 
